[gd_scene load_steps=6 format=3 uid="uid://dvbbemiqssea1"]

[ext_resource type="Script" path="res://Assets/Scenes/ElementMeter/ElementalMeter.gd" id="1_v7ok1"]
[ext_resource type="Texture2D" uid="uid://dcfbtxyn5dsqu" path="res://Assets/Images/straw-background 4.png" id="2_pvptd"]
[ext_resource type="Texture2D" uid="uid://bhgnpqwoyivtk" path="res://Assets/Images/straw-background-toxic 2.png" id="3_hhbhl"]
[ext_resource type="Texture2D" uid="uid://c71pbq7bqkrx3" path="res://Assets/Images/margin_indicator.png" id="4_vcn4k"]
[ext_resource type="Script" path="res://Assets/Scenes/ElementMeter/HitAreaIndicator.gd" id="5_xci0i"]

[node name="ElementalMeter" type="Node2D"]
script = ExtResource("1_v7ok1")

[node name="ProgressBar" type="TextureProgressBar" parent="."]
offset_right = 300.0
offset_bottom = 32.0
nine_patch_stretch = true
stretch_margin_left = 8
stretch_margin_top = 8
stretch_margin_right = 8
stretch_margin_bottom = 8
texture_under = ExtResource("2_pvptd")
texture_progress = ExtResource("3_hhbhl")

[node name="HitAreaIndicator" type="Node2D" parent="."]
self_modulate = Color(0.156863, 0.529412, 0, 1)
position = Vector2(0, 16)
script = ExtResource("5_xci0i")
metadata/_edit_lock_ = true

[node name="PerfectStart" type="Sprite2D" parent="HitAreaIndicator"]
modulate = Color(0.0156863, 0.717647, 0.0392157, 1)
texture = ExtResource("4_vcn4k")
metadata/_edit_lock_ = true

[node name="PerfectEnd" type="Sprite2D" parent="HitAreaIndicator"]
modulate = Color(0.0156863, 0.717647, 0.0392157, 1)
texture = ExtResource("4_vcn4k")
metadata/_edit_lock_ = true

[node name="GoodStart" type="Sprite2D" parent="HitAreaIndicator"]
modulate = Color(0.956863, 0.717647, 0.0392157, 1)
texture = ExtResource("4_vcn4k")
metadata/_edit_lock_ = true

[node name="GoodEnd" type="Sprite2D" parent="HitAreaIndicator"]
modulate = Color(0.956863, 0.717647, 0.0392157, 1)
texture = ExtResource("4_vcn4k")
metadata/_edit_lock_ = true

[node name="MediocreStart" type="Sprite2D" parent="HitAreaIndicator"]
modulate = Color(0.917647, 0, 0.211765, 1)
scale = Vector2(0.5, 1)
texture = ExtResource("4_vcn4k")
metadata/_edit_lock_ = true

[node name="MediocreEnd" type="Sprite2D" parent="HitAreaIndicator"]
modulate = Color(0.917647, 0, 0.211765, 1)
scale = Vector2(0.5, 1)
texture = ExtResource("4_vcn4k")
metadata/_edit_lock_ = true

[node name="DebugLabel" type="Label" parent="."]
visible = false
offset_left = 70.0
offset_top = 35.0
offset_right = 110.0
offset_bottom = 58.0
